2008-01-19  Sam Steingold  <sds@gnu.org>

	* control.d (THE): raise TYPE-ERROR on failure

2008-01-18  Sam Steingold  <sds@gnu.org>

	* debug.d (print_back_trace, print_stackitem):
	also print FRAME offset from STACK_start
	(show_stack): use STACK_start instead of nullobj to check for stack end;
	print bt & FRAME _before_ testing for loop termination

2008-01-17  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1506316 ]: segfault in framep() debug.d:644
	* debug.d (stack_upend_p): use "STACK_start cmpSTACKop FRAME"
	instead of "eq(FRAME_(0),nullobj)" to check for STACK start
	(stack_downend_p): use "FRAME cmpSTACKop STACK" to check for STACK end

2008-01-17  Sam Steingold  <sds@gnu.org>

	* pathname.d (open_file): fix a gc-safety bug in (open
	... :direction :output :if-exists :rename-and-delete)
	by keeping namestring on the STACK all along

2008-01-16  Sam Steingold  <sds@gnu.org>

	* pathname.d (open_file): fix G++ compilation
	* charstrg.d (uc_width): remove the global inline declaration of
	the gnulib function to avoid a G++ warning

2008-01-16  Sam Steingold  <sds@gnu.org>

	* ariarm.d, lispbibl.d: convert comments from "# " to "/**/"

2008-01-16  Sam Steingold  <sds@gnu.org>

	* foreign.d (convert_function_to_foreign, convert_from_foreign)
	(convert_from_foreign_array_fill, convert_to_foreign, %ELEMENT):
	use while instead of dotimes and do/while instead of dotimesp
	(%ELEMENT): avoid GCC "warning: value computed is not used"

2008-01-16  Sam Steingold  <sds@gnu.org>

	* list.d (make_list, NTHCDR, listof, LIST*, APPEND, NCONC, NBUTLAST):
	use while instead of dotimes and do/while instead of dotimesp

2008-01-16  Sam Steingold  <sds@gnu.org>

	* sequence.d (REDUCE): use missingp
	(CONCATENATE, seq_boolop, MAP, MAP-INTO, delete_help, substitute_help):
	use while instead of dotimes and do/while instead of dotimesp
	(verify_return_value, VERIFY_RETURN_VALUE): add function & macro
	(MAKE-SEQUENCE, coerce_sequence, COERCED-SUBSEQ, CONCATENATE, MAP)
	(MERGE): use them