@@ -1,3 +1,8 @@
+2008-01-21  Sam Steingold  <sds@gnu.org>
+
+	* eval.d (reset): set unwind_protect_to_save.upto_frame;
+	print a useful(?) error message on abort
+
 2008-01-19  Sam Steingold  <sds@gnu.org>
 
 	* control.d (THE): raise TYPE-ERROR on failure
